--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/athlete-registry
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.data.rest.base-path=/api
